# inkling-code

./: .env.example  .gitignore  README.md  agent.py  commands.py  config.json  inkling.py  install.sh  mcp.json.example  mcp_client.py  permissions.py  pyproject.toml  repl.py  sessions.py  skills.py  tools.py  ui.py
skills/: commit.md  debug.md  explore.md  init.md  refactor.md  research.md  review.md  test.md
