[project]
name = "inkling-client"
version = "0.2.0"
description = "Agentic terminal client for thinkingmachines/Inkling — skills, MCP, subagents, sessions"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "openai>=2.47.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
]
